# iris

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
server/: Cargo.toml
server/macros/: Cargo.toml
server/macros/src/: lib.rs
server/src/: main.rs
server/src/database/: mod.rs
server/src/entity/: message.rs  mod.rs  reactions.rs  user.rs
server/src/schema/: channels.rs  ctes.rs  messages.rs  mod.rs  reactions.rs  users.rs
server/src/server/: messages.rs  mod.rs
server/src/server/gateway/: context.rs  messages.rs  mod.rs  receipts.rs  typing.rs
server/src/server/rest/: auth.rs  contacts.rs  messages.rs  middlewares.rs  mod.rs  reactions.rs  search.rs  user.rs
server/src/util/: mod.rs  snowflake.rs
server/src/ws/: mod.rs
web/: .gitignore  package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/interaction/: api.ts  message.ts  server.ts
web/src/lib/: api.ts  constants.ts  index.ts  user.ts
web/src/lib/animation/: crossfade.ts
web/src/lib/components/: Alert.svelte  Chat.svelte  Contact.svelte  EmojiMenu.svelte  Message.svelte  Nothing.svelte  ThemeToggle.svelte
web/src/lib/network/: api.ts  message.ts  server.ts
web/src/lib/util/: emojis.ts  snowflake.ts
web/src/routes/: +page.svelte
web/src/routes/(portal)/: +layout.server.ts  +layout.svelte
web/src/routes/(portal)/app/: +layout.svelte  +page.svelte  PortalLayout.svelte
web/src/routes/login/: +page.svelte
web/src/routes/signup/: +page.svelte
web/src/util/: targetedStore.ts
web/static/messages/: ChannelRead.proto  ContactTyping.proto  ContextRead.proto  MessageCreated.proto  MessageDeleted.proto  MessageEdited.proto  MessagesRead.proto  Packet.proto  ReactionAdded.proto  ReactionRemoved.proto  TextMessage.proto  TextMessageResponse.proto  TypingRequest.proto
(+11 files in other folders)
