[package]
name = "iris-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
headers = "0.4"
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

prost = "^0.13"
prost-types="^0.13"
prost-build="^0.13"